--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
     ]
   },
   "devDependencies": {
-    "redux-devtools-extension": "^2.13.9"
+    "eslint": "^7.25.0",
+    "eslint-plugin-react": "^7.23.2",
+    "redux-devtools-extension": "^2.13.9",
+    "stylelint": "^13.13.1"
   }
 }
